# ScienTool

./: .gitignore  CMakeLists.txt  README.md  build_guide.md  build_guide.txt
apps/scientool/: CMakeLists.txt  main.cpp
apps/scientool/include/: MainWindow.hpp
apps/scientool/qml/: Main.qml
apps/scientool/qml/components/mainwindow/: HeaderBar.qml
apps/scientool/src/: MainWindow.cpp
cmake/: dependencies.cmake  options.cmake  warnings.cmake
modules/core/: CMakeLists.txt
modules/core/src/: placeholder.cpp
modules/math/: CMakeLists.txt
modules/math/src/: placeholder.cpp
modules/ode/: CMakeLists.txt
modules/ode/src/: placeholder.cpp
modules/physics/: CMakeLists.txt
modules/physics/src/: placeholder.cpp
modules/plotting/: CMakeLists.txt
modules/plotting/src/: placeholder.cpp
modules/repl/: CMakeLists.txt
modules/repl/backends/hobbes/: CMakeLists.txt  HobbesBackend.hpp
modules/repl/backends/lua/: CMakeLists.txt  LuaBackend.hpp
modules/repl/backends/python/: CMakeLists.txt  PythonBackend.cpp  PythonBackend.hpp
modules/repl/include/scientool/repl/: IReplBackend.hpp  ReplEngine.hpp
modules/repl/src/: ReplEngine.cpp  placeholder.cpp
modules/sim2d/: CMakeLists.txt
modules/sim2d/src/: placeholder.cpp
modules/sim3d/: CMakeLists.txt
modules/sim3d/src/: placeholder.cpp
modules/ui/: CMakeLists.txt
modules/ui/src/: placeholder.cpp
